@@ -16,7 +16,8 @@ Bugfixes:
 * Bugreport #167: Zone fetcher now also picks up changes when zonelist is
   reloaded (thanks Rick van Rein)
 * Bugreport #169: Do not include config.h in the distribution
-* Bugreport #170: Typo in man page
+* Bugreport #170: Typo in a man page (ods-signer)
+* Bugreport #172: Correction of some macros in a man page (ods-timing)
 
 
 OpenDNSSEC 1.1.1 - 2010-07-08
